== VERSION 0.5 TO VERSION 0.6 ==
+ Added new methods:
	+ radio.getPlaylist
	+ radio.tune
	+ venue.getEvents
	+ venue.getPastEvents
	+ venue.search

== VERSION 0.4 TO VERSION 0.5 ==
+ Added mysql support for the caching system (it still defaults to sqlite as it's lighter and easier to setup)
+ Added new methods:
	+ artist.getShouts
	+ artist.shout
	+ event.getAttendees
	+ event.getShouts
	+ event.shout
	+ user.getShouts
	+ user.shout
+ Added PHPDocumentor comments to all methods to allow automatic documentation generation
* Fixed badly formed XML errors appearing. Will return error 95 when it happens. It is up to the application to
	decide how to handle the error. Thank you to her035 for the advice on how to fix it and the nice example
	that was made for me (http://her035.de/lastfm/test/xml.php). Much appreciated!
* Fixed geo.getTopTracks example so it now works

== VERSION 0.3.1 TO VERSION 0.4 ==
+ Added automatic caching using sqlite (config variables are passed as the 3rd parameter of the getPackage method)
+ Added new method artist.getImages (Thanks to lastfm staff member Steve Gravell for
	giving me the code before the method was even released. Cheers Steve!)
+ Added error handling to the "Which staff member am I?" sample application

== VERSION 0.3 TO VERSION 0.3.1 ==
* Fixed error with non-subscribers not being able to auth (Thanks to methhhp for the bug report)

== VERSION 0.2.1 TO VERSION 0.3 ==
+ Added new methods:
	+ album.search
	+ group.getMembers
	+ library.addAlbum
	+ library.addArtist
	+ library.addTrack
	+ playlist.create
	+ tag.getWeeklyArtistChart
	+ tag.getWeeklyChartList
	+ user.getRecommendedArtists
	+ user.getRecommendedEvents

== VERSION 0.1 TO VERSION 0.2.1 ==
* Fixed minor bug with variables not being correctly encoded before being sent, causing &'s and ?'s to create errors
* Minor update to the user.getFriends example to show how the recent tracks parameter works

== VERSION 0.1 TO VERSION 0.2 ==
