@@ -5,6 +5,8 @@
 	+ venue.getEvents
 	+ venue.getPastEvents
 	+ venue.search
++ Added lang parameter to album.getInfo and artist.getInfo. Cheers to Christian Grlica
+	(heavenseven, http://www.last.fm/user/heavenseven) for adding the code needed in and send it to me.
 
 == VERSION 0.4 TO VERSION 0.5 ==
 + Added mysql support for the caching system (it still defaults to sqlite as it's lighter and easier to setup)
